Finished with nav bar logic

--- a/style.css
+++ b/style.css
@@ -28,10 +28,12 @@ body{
     justify-content: space-between;
     padding: 15px;
     border: 1px solid var(--border-color);
-    border-radius: 20px 20px 0 0;
+    border-radius: 20px 20px 20px 20px;
     box-shadow: 0px 0px 40px 1px #c7c3c2;
     background: #e8dde063;
     backdrop-filter: blur(20px);
+    transition: border-radius 0.5s ease;
+
 }
 .top-nav svg{
     width: 30px;
@@ -44,7 +46,51 @@ body{
     color: var(--text-color);
 }
 .top-nav svg:nth-child(2):hover{
-    transform: rotate(90deg);
+    color: #7B7B79;
+}
+.middle-nav{
+    display: flex;
+    justify-content: space-between;
+    align-items:flex-start;
+    padding: 20px 30px;
+    border: 1px solid var(--border-color);
+    border-radius: 0px 0px 20px 20px;
+    box-shadow: 0px 0px 40px 1px #c7c3c2;
+    background: #e8dde063;
+    backdrop-filter: blur(20px);
+    transform: scaleY(0);
+    transform-origin: top center;
+    transition: all 0.3s ease;
+}
+.middle-nav-column {
+    display: flex;
+    flex-direction: column;
+    align-items:flex-start;
+    justify-content: space-between;
+    gap: 30px;
+}
+.middle-nav-column p{
+    color: var(--text-color);
+    text-transform: uppercase;
+}
+.middle-nav-column ul{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: 0;
+    gap:30px;
+}
+.middle-nav-column ul li a{
+    color: black;
+    transition: all 0.2s ease;
+}
+.middle-nav-column ul li a:hover{
+    text-decoration: underline;
+    color: blue ;
+}
+p,a{
+    transition: opacity .1s ease;
 }
 .hero-section{
     margin-top: 200px;
@@ -60,12 +106,12 @@ body{
     color: var(--text-color);
     opacity: 0;
     animation: fadeIn 1s ease-out forwards;
-    z-index: -1000;
+    z-index: -1;
 }
 .hero-section img{
     width: 500px;
     height: auto;
-    transform: rotate3d(10, 100, 50, 10deg);
+    transform: rotate(10, 100, 10deg);
     animation: box-thing 2s ease infinite;
 }
 .hero-section p{
@@ -82,26 +128,20 @@ body{
     font-family: 'Inter',sans-serif;
     font-weight: 500;
 }
-.middle-nav{
-    display: flex;
-    justify-content: space-between;
-    align-items:flex-start;
-    padding: 20px 20px;
-}
 @keyframes box-thing {
     0%{
-        transform: rotate3d(10, 100, 50, 10deg)
+        transform: rotate(10, 100, 10deg)
         
     }
     50%{
-        transform: rotate3d(-100, -300, 50, 10deg)
+        transform: rotate(-100, -300, 10deg)
     }
     50%{
-        transform: rotate3d(100, 300, 50, 10deg)
+        transform: rotate(100, 300, 10deg)
     }
     
     100% {
-        transform: rotate3d(10, 100, 50, 10deg)
+        transform: rotate(10, 100, 10deg)
     }
 }
 
