New images folder

--- a/style.css
+++ b/style.css
@@ -215,7 +215,7 @@ body p{
     }
 }
 
-@keyframes fade-in {
+/* @keyframes fade-in {
     from {scale: .8; opacity: 0;}
     to {scale: 1; opacity: 1;}
-    }
+    } */
