--- a/style.css
+++ b/style.css
@@ -17,10 +17,6 @@ body{
     flex-direction: column;
     align-items: center;
 }
-body p{
-    animation: fade-in .5s ease;
-    animation-timeline: view();
-}
 .nav-wrapper{
     position: fixed;
     display: flex;
@@ -31,10 +27,9 @@ body p{
     top:50px;
     padding: 15px;
     transform: translateX(-50%);
-    backdrop-filter: blur(20px);
+    backdrop-filter: blur(15px);
     background: #e8dde063;
     border-radius:20px;
-    backdrop-filter: blur(20px);
     height: 60px;
     border: 1px solid var(--border-color);
     transition: all .5s cubic-bezier(.47,1.64,.41,.8);
@@ -102,7 +97,7 @@ body p{
     align-items: center;
 }
 .hero-text{
-    font-size: 90px;
+    font-size: 9rem;
     font-weight: 300;
     color: var(--text-color);
     opacity: 1;
